--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url('../images/heroimage.jpg');
+	background-image: url('/unit_3/images/heroimage.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
