unit 3 homepage - update #3

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-<<<<<<< HEAD
+	background: url("../images/HeroImage.svg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
